[package]
name = "gardiz"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"
description = "A library for integer geometry on 2D planes, focused on games"
readme = "README.md"
repository = "https://github.com/brunoczim/gardiz"
license-file = "LICENSE"
keywords = ["plane", "graph", "geometry", "integer", "2D"]
categories = ["game-development", "mathematics", "data-structures"]

[dependencies]
num = "^0.4"
priority-queue = "^1.1"
