[package]
name = "gardiz"
version = "0.1.1"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"
description = "A library for integer geometry on 2D planes, focused on games"
readme = "README.md"
repository = "https://github.com/brunoczim/gardiz"
license-file = "LICENSE"
keywords = ["plane", "graph", "geometry", "integer", "2D"]
categories = ["game-development", "mathematics", "data-structures"]

[features]
default = ["impl-serde"]
impl-serde = ["serde"]

[dependencies]
num = "^0.4"
serde = { version = "^1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "^0.7"
